--- a/maixuanhien_test/Assembly-CSharp.csproj
+++ b/maixuanhien_test/Assembly-CSharp.csproj
@@ -60,9 +60,11 @@
      <Compile Include="Assets\Scripts\EnemyKamikazeBehavior.cs" />
      <Compile Include="Assets\Scripts\EnemyShield.cs" />
      <Compile Include="Assets\Scripts\LaserScript.cs" />
+     <Compile Include="Assets\Scripts\MultiDimensionalString.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerHealth.cs" />
      <Compile Include="Assets\Scripts\ProjectileControler.cs" />
+     <Compile Include="Assets\Scripts\SpawnerController.cs" />
      <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\CircleObject.cs" />
      <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\GameObjectExtensions.cs" />
      <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\GPUInstancing.cs" />
