--- a/maixuanhien_test/maixuanhien_test.csproj
+++ b/maixuanhien_test/maixuanhien_test.csproj
@@ -78,6 +78,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\BulletBomerController.cs" />
+    <Compile Include="Assets\Scripts\BulletBomerHit.cs" />
     <Compile Include="Assets\Scripts\BulletHit.cs" />
     <Compile Include="Assets\Scripts\cameraFollow.cs" />
     <Compile Include="Assets\Scripts\DestroyMe.cs" />
