--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,11 @@
 # Visio autosave temporary files
 *.~vsd*
 
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/Assets/AssetStoreTools*
+./maixuanhien_test/Library/*
+./maixuanhien_test/Temp/*
+./maixuanhien_test/obj/*
+./maixuanhien_test/Build/*
+./maixuanhien_test/Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
 /.vs/
