--- a/maixuanhien_test/Assembly-CSharp.csproj
+++ b/maixuanhien_test/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Scripts\BulletBomerHit.cs" />
      <Compile Include="Assets\Scripts\BulletHit.cs" />
      <Compile Include="Assets\Scripts\cameraFollow.cs" />
+     <Compile Include="Assets\Scripts\Checkpoint.cs" />
      <Compile Include="Assets\Scripts\DestroyMe.cs" />
      <Compile Include="Assets\Scripts\EnemyBomer.cs" />
      <Compile Include="Assets\Scripts\EnemyController.cs" />
@@ -67,8 +68,9 @@
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerHealth.cs" />
      <Compile Include="Assets\Scripts\ProjectileControler.cs" />
+     <Compile Include="Assets\Scripts\SpawnerEnemy.cs" />
      <Compile Include="Assets\Scripts\SpawnerPlayer.cs" />
-     <Compile Include="Assets\Scripts\SpawnerTrigger.cs" />
+     <Compile Include="Assets\Scripts\Visible.cs" />
      <Compile Include="Assets\Scripts\WaveEnemyController.cs" />
      <Compile Include="Assets\Scripts\ZoneDegat.cs" />
      <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\CircleObject.cs" />
