fix about enemy and spawner player

--- a/maixuanhien_test/Assembly-CSharp.csproj
+++ b/maixuanhien_test/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Scripts\ArmorUI.cs" />
      <Compile Include="Assets\Scripts\BossBehavior.cs" />
      <Compile Include="Assets\Scripts\BossController.cs" />
+     <Compile Include="Assets\Scripts\BossDamage.cs" />
      <Compile Include="Assets\Scripts\BulletBomerController.cs" />
      <Compile Include="Assets\Scripts\BulletBomerHit.cs" />
      <Compile Include="Assets\Scripts\BulletHit.cs" />
@@ -70,6 +71,7 @@
      <Compile Include="Assets\Scripts\EnemyShield.cs" />
      <Compile Include="Assets\Scripts\LaserScript.cs" />
      <Compile Include="Assets\Scripts\LazerBossController.cs" />
+     <Compile Include="Assets\Scripts\LazerBossHit.cs" />
      <Compile Include="Assets\Scripts\MultiDimensionalString.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerHealth.cs" />
@@ -78,6 +80,7 @@
      <Compile Include="Assets\Scripts\SpawnerPlayer.cs" />
      <Compile Include="Assets\Scripts\Visible.cs" />
      <Compile Include="Assets\Scripts\WaveEnemyController.cs" />
+     <Compile Include="Assets\Scripts\ZoneBoss.cs" />
      <Compile Include="Assets\Scripts\ZoneDegat.cs" />
      <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\CircleObject.cs" />
      <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\GameObjectExtensions.cs" />
